# htmdict

./: .gitignore  Oxford.diction  README.md  Scientific.diction  build.sh  fixme.txt  meson.build
diction-standard-1/: diction_complete_readme_specification-1.md  style.css
diction-standard-1.0/: diction_specification_1_0_final.md  dsl2diction_v0.1.py
diction-standard-1/examples/: ScientificDictionary.diction
diction-standard-1/examples/CrossReferenceDictionary/: CrossReference.html  meta.json  style.css
diction-standard-1/examples/JapaneseRubyDictionary/: RubyDictionary.html  meta.json  style.css
diction-standard-1/examples/ListStylesDictionary/: ListStyles.html  meta.json  style.css
diction-standard-1/examples/ManyToOneDictionary/: ManyToOne.html  meta.json  style.css
diction-standard-1/examples/MinimalEnglish/: MinimalEnglish.html  meta.json  style.css
diction-standard-1/examples/OneToManyDictionary/: OneToMany.html  meta.json  style.css
diction-standard-1/examples/RichMediaDictionary/: RichMedia.html  meta.json  style.css
diction-standard-1/examples/ScientificDictionary/: Scientific.html  meta.json  style.css
sample_diction_standard/: Oxford.diction
sample_diction_standard/Oxford/: Oxford.html  meta.json  style.css
sampledict/: dictionary.html  sampledict.diction
scratch/: convert_standard.py
scripts/: bundle_dict.py
src/: dict-cache-builder.c  dict-cache-builder.h  dict-cache.c  dict-cache.h  dict-fts-index.c  dict-fts-index.h  diction-convert.c  diction-convert.h  dsl2diction.c  flat-index.c  flat-index.h  htm-dict.c  htm-dict.h  main.c  mdict-parser.c  mdict-parser.h  mdx2diction.c  ripemd128.c  ripemd128.h  zip-mmap.c  zip-mmap.h
